try 2 fix images

--- a/_sass/jekyll-theme-slate.scss
+++ b/_sass/jekyll-theme-slate.scss
@@ -330,7 +330,7 @@ Full-Width Styles
   background: url(../images/sprite_download.png) no-repeat bottom left;
 }
 
-.tar_download_link {
+.discord_svr {
   display: block;
   float: right;
   width: 90px;
@@ -345,7 +345,7 @@ Full-Width Styles
   background: url(../images/sprite_download.png) no-repeat top left;
 }
 
-.tar_download_link:hover {
+.discord_svr:hover {
   background: url(../images/sprite_download.png) no-repeat top right;
 }
 
