try 2 fix images (again)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,7 @@
           {% if site.show_downloads %}
             <section id="downloads">
               <a class="zip_download_link" href="{{ site.github.zip_url }}">Download program</a>
-              <a class="discord_svr" href="{{ site.github.discord_url }}">HDL Batch Installer server</a>
+              <a class="tar_download_link" href="{{ site.github.tar_url }}">Go to discord server</a>
             </section>
           {% endif %}
         </header>
