--- a/HDL-Batch-installer-SRC/wxsmith/Config.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/Config.wxs
@@ -60,38 +60,55 @@
 											<object class="wxFlexGridSizer" variable="FlexGridSizer4" member="no">
 												<cols>2</cols>
 												<object class="sizeritem">
-													<object class="wxCheckBox" name="ID_CHECKBOX1" variable="miniopl_warning" member="yes">
-														<label>OPL Launcher warnings</label>
-														<checked>1</checked>
+													<object class="wxGridSizer" variable="GridSizer1" member="no">
+														<cols>2</cols>
+														<object class="sizeritem">
+															<object class="wxCheckBox" name="ID_CHECKBOX1" variable="miniopl_warning" member="yes">
+																<label>OPL Launcher warnings</label>
+																<checked>1</checked>
+															</object>
+															<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+															<border>5</border>
+															<option>1</option>
+														</object>
+														<object class="sizeritem">
+															<object class="wxCheckBox" name="ID_CHECKBOX2" variable="osd_hide_settings" member="yes">
+																<label>Hide game</label>
+																<tooltip>When enabled, the program will install games using ____. as partition prefix instead of PP.&#x0A;&#x0A;This will hide games from HDD-OSD.&#x0A;&#x0A;Also, this alternative prefix is required to launch games via OPL Launcher from PSBBN and PSX XMB menu</tooltip>
+															</object>
+															<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+															<border>5</border>
+															<option>1</option>
+														</object>
+														<object class="sizeritem">
+															<object class="wxCheckBox" name="ID_CHECKBOX4" variable="CUSTOM_ICONS" member="yes">
+																<label>Custom Icon Loader</label>
+																<checked>1</checked>
+															</object>
+															<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+															<border>5</border>
+															<option>1</option>
+														</object>
+														<object class="sizeritem">
+															<object class="wxCheckBox" name="ID_CHECKBOX5" variable="DATA_COLLECTION" member="yes">
+																<label>Data Collection</label>
+																<tooltip>When this Feature is enabled, the program will send information to it&apos;s creator every time it installs a game whose region code isn&apos;t registered in the database</tooltip>
+															</object>
+															<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+															<border>5</border>
+															<option>1</option>
+														</object>
+														<object class="sizeritem">
+															<object class="wxCheckBox" name="ID_CHECKBOX6" variable="AllowExperimental" member="yes">
+																<label>Allow unstable/experimental features</label>
+																<handler function="OnCheckBox1Click" entry="EVT_CHECKBOX" />
+															</object>
+															<flag>wxALL|wxALIGN_LEFT|wxALIGN_TOP</flag>
+															<border>5</border>
+															<option>1</option>
+														</object>
 													</object>
-													<flag>wxALL|wxEXPAND</flag>
-													<border>5</border>
-													<option>1</option>
-												</object>
-												<object class="sizeritem">
-													<object class="wxCheckBox" name="ID_CHECKBOX2" variable="osd_hide_settings" member="yes">
-														<label>Hide game</label>
-														<tooltip>When enabled, the program will install games using ____. as partition prefix instead of PP.&#x0A;&#x0A;This will hide games from HDD-OSD.&#x0A;&#x0A;Also, this alternative prefix is required to launch games via OPL Launcher from PSBBN and PSX XMB menu</tooltip>
-													</object>
-													<flag>wxALL|wxEXPAND</flag>
-													<border>5</border>
-													<option>1</option>
-												</object>
-												<object class="sizeritem">
-													<object class="wxCheckBox" name="ID_CHECKBOX5" variable="DATA_COLLECTION" member="yes">
-														<label>Data Collection</label>
-														<tooltip>When this Feature is enabled, the program will send information to it&apos;s creator every time it installs a game whose region code isn&apos;t registered in the database</tooltip>
-													</object>
-													<flag>wxALL|wxALIGN_LEFT|wxALIGN_CENTER_VERTICAL</flag>
-													<border>5</border>
-													<option>1</option>
-												</object>
-												<object class="sizeritem">
-													<object class="wxCheckBox" name="ID_CHECKBOX4" variable="CUSTOM_ICONS" member="yes">
-														<label>Custom Icon Loader</label>
-														<checked>1</checked>
-													</object>
-													<flag>wxALL|wxEXPAND</flag>
+													<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 													<border>5</border>
 													<option>1</option>
 												</object>
