--- a/HDL-Batch-installer-SRC/wxsmith/HDDManager.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/HDDManager.wxs
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <wxsmith>
 	<object class="wxDialog" name="HDDManager">
+		<title>HDDManager</title>
 		<pos_arg>1</pos_arg>
 		<size_arg>1</size_arg>
+		<style>wxSTAY_ON_TOP|wxDEFAULT_DIALOG_STYLE|wxSYSTEM_MENU</style>
 		<object class="wxFlexGridSizer" variable="FlexGridSizer1" member="no">
 			<cols>1</cols>
 			<object class="sizeritem">
@@ -13,6 +15,7 @@
 							<size>1030,307</size>
 							<style>wxLC_REPORT|wxLC_SORT_ASCENDING|wxLC_HRULES|wxLC_VRULES</style>
 							<handler function="OnPARTListBeginDrag" entry="EVT_LIST_BEGIN_DRAG" />
+							<handler function="OnPARTListItemRClick" entry="EVT_LIST_ITEM_RIGHT_CLICK" />
 						</object>
 						<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 						<border>5</border>
@@ -30,6 +33,12 @@
 				<flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
 				<border>5</border>
 				<option>1</option>
+			</object>
+		</object>
+		<object class="wxMenu" variable="HDDManagerMenu" member="yes">
+			<object class="wxMenuItem" name="ID_MENUITEM1" variable="MenuItem1" member="yes">
+				<label>Delete Partition</label>
+				<handler function="OnPartitionDeleteRequest" entry="EVT_MENU" />
 			</object>
 		</object>
 	</object>
