--- a/HDL-Batch-installer-SRC/wxsmith/HDDManager.wxs
+++ b/HDL-Batch-installer-SRC/wxsmith/HDDManager.wxs
@@ -4,7 +4,7 @@
 		<title>HDDManager</title>
 		<pos_arg>1</pos_arg>
 		<size_arg>1</size_arg>
-		<style>wxSTAY_ON_TOP|wxDEFAULT_DIALOG_STYLE|wxSYSTEM_MENU</style>
+		<style>wxDEFAULT_DIALOG_STYLE|wxSYSTEM_MENU</style>
 		<object class="wxFlexGridSizer" variable="FlexGridSizer1" member="no">
 			<cols>1</cols>
 			<object class="sizeritem">
